# hcc

./: .gitignore  Makefile  README.md  hcc.cabal
L1/compiler/: Makefile  arch.txt  c0c.cabal  hcc.cabal
L1/compiler/src/: Args.hs  Compile.hs  c0c.hs  hcc.hs
L1/compiler/src/Compile/: Backend.hs  Frontend.hs  IR.hs  Types.hs
L1/compiler/src/Compile/Frontend/: CheckAST.hs  Parse.hs
L1/compiler/src/Compile/IR/: AAsm3Op.hs  CodeGen.hs
L1/compiler/src/Compile/Types/: AAsm.hs  AST.hs
L1/compiler/test/: TestSuite.hs  c0c-testsuite.cabal  run
L1/compiler/test/suite/: TestSuite.hs
L1/compiler/test/suite/Compile/: Tests.hs
L1/compiler/test/suite/Compile/Frontend/: ParseTests.hs  TestUtils.hs  Tests.hs
L1/compiler/test/suite/Compile/Frontend/Parse/: Tests.hs
src/: hcc.hs
src/Compile/: Frontend.hs  IR.hs
src/Compile/Frontend/: CheckAST.hs  Parse.hs
src/Compile/Types/: AbstractAssembly.hs  Ops.hs
src/Hcc/: Args.hs  Compile.hs  LiftIOE.hs
src/Hcc/Compile/: Backend.hs  Frontend.hs  IR.hs  Types.hs
src/Hcc/Compile/Frontend/: CheckAST.hs  Parse.hs
src/Hcc/Compile/IR/: CodeGen.hs  SimpleStmt.hs
src/Hcc/Compile/Types/: AST.hs  AbstractAssembly.hs  IR.hs  Job.hs  Ops.hs
test/: TestSuite.hs  run
test/Hcc/Compile/: Tests.hs
test/Hcc/Compile/Frontend/: TestUtils.hs  Tests.hs
test/Hcc/Compile/Frontend/CheckAST/: Tests.hs
test/Hcc/Compile/Frontend/Parse/: Tests.hs
test/suite/: TestSuite.hs
test/suite/Compile/: Tests.hs
test/suite/Compile/Frontend/: Tests.hs
test/suite/Compile/Frontend/CheckAST/: Tests.hs
