Name:                c0c
Version:             0.0
Description:         C0 compiler
Author:              Ryan Stout
Maintainer:          rstout610@gmail.com
Category:			 Development
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable c0c
  Main-is:           c0c.hs
  Hs-Source-Dirs:    src	
  Build-Depends:     base 