name:           c0c-testsuite
version:        0.0.1
build-type:     Simple
cabal-version:  >= 1.8

Executable c0c-testsuite
  main-is:         TestSuite.hs
  hs-source-dirs:  ../src suite
  Build-Depends:   base, HUnit, bytestring, syb, mtl, test-framework
  Extensions:      DeriveDataTypeable, RankNTypes, FlexibleInstances,
                   FlexibleContexts, MultiParamTypeClasses
